# rbac_server_rust

./: Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs
src/api/: graphql_api.rs
src/db/: db_config.rs  permissions.rs  roles.rs  users.rs
src/graphql/: mutations.rs  queries.rs
src/utilities/: auth.rs  jwt.rs
