[package]
name = "rbac_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-graphql = "7.0.9"
async-graphql-actix-web = "7.0.9"
chrono = "0.4.38"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
postgres = "0.19.9"
serde = {version ="1.0.210" , features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls","postgres","macros" ] }
thiserror = "1.0.63"
tokio = "1.40.0"
sha2 = "0.10"
digest = "0.10"
hex = "0.4"
clap = "4.5.18"
